--- a/Unit-5/Evaluation/ev4/src/App.css
+++ b/Unit-5/Evaluation/ev4/src/App.css
@@ -1,6 +1,9 @@
 .App {
   text-align: center;
 }
+.nav-home,.nav-logout{
+  margin-right: 2%;
+}
 
 .App-logo {
   height: 40vmin;
@@ -28,11 +31,20 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App{
+  border:2px red solid;
+  margin:auto;
+  width: 50%;
+  height: 400px;
+  background-color: azure;
+  padding: 20px;
+
+}
+
+.nav-home {
+ margin-top: 15px;
+ margin-left: 15px;
+ margin-right: 15px;
+ margin: 10px;
+ color: rgb(59, 159, 59)
 }
